scripts/tests/errors/err_duplicate_else.bu
// Test: duplicate else blocks
// Expected: compile error

if (true) {
    print("a");
} else {
    print("b");
} else {
    print("c");
}
